--- a/.env
+++ b/.env
@@ -4,6 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://servet:servet@cluster0.kpjcp1c.mongodb.net/
+DATABASE_URL="mongodb+srv://servet:servet@cluster0.kpjcp1c.mongodb.net/test"
 
-"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=db32c2a434c5588c7427
+GITHUB_SECRET=8a4d3327411d336b0e342980dd0fa2f17f451df1
+
+GOOGLE_CLIENT_ID=12520488782-c2jkkmrl56kqc6md5scof4ci4e7bf9j6.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
