--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ GITHUB_SECRET=8a4d3327411d336b0e342980dd0fa2f17f451df1
 
 GOOGLE_CLIENT_ID=12520488782-c2jkkmrl56kqc6md5scof4ci4e7bf9j6.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dbghinllu"
