--- a/package.json
+++ b/package.json
@@ -16,20 +16,29 @@
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "leaflet": "^1.9.4",
     "next": "13.4.4",
     "next-auth": "^4.22.3",
+    "next-cloudinary": "^4.22.0",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.4",
     "typescript": "5.0.4",
+    "world-countries": "^5.0.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "prisma": "^5.1.1",
