--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "next-cloudinary": "^4.22.0",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-leaflet": "^4.2.1",
     "react-select": "^5.7.4",
+    "react-spinners": "^0.13.8",
     "typescript": "5.0.4",
     "world-countries": "^5.0.0",
     "zustand": "^4.3.8"
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/leaflet": "^1.9.4",
+    "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "prisma": "^5.1.1",
